     monomer bespoke ligand dictionaries.

   o BUG-FIX: Hydrogens names are better handled after an undo
     operation - no longer do they fly off when refining [Joel Bard]

   o BUG-FIX: Non-flexible ligands can be added to ligand search when
     the "flexible?" option is selected.  Previously the ligand search
     was aborted.

   o BUG-FIX: side-by-side stereo mode improved.
 
   o BUG-FIX: Now coot does not crash on when displaying NPD atoms
     in anisotropic representation [Mitch Miller].

   o BUG-FIX: Coot no longer crashes when deleting a residue with an
     Alt Conf.

   o BUG-FIX: Can now read SHELXL .ins files with lowercase symops.

   o BUG-FIX: On additions to a SHELXL molecule: better handling of
     UNIT and SFAC cards [GMS].

   o BUG-FIX: EQUIV cards from SHELXL handled better.

   o BUG-FIX: Adding waters to a SHELXL molecule now adds them with
     default occupancy 11.0 [Tobias Beck]

   o BUG-FIX: Go To Atom dialog is properly updated on reading merging
     molecules.
 
   o BUG-FIX: Coot no longer crashes when opening the Bond Parameters
     dialog before a pdb file has been read.

   o BUG-FIX: NCS Loop function now properly mutates residues in the
     peer chains [PRE].

   o BUG-FIX: Add Terminal Residue deletes the TER record (if it
     existed) of previous C-terminus [PRE].

   o BUG-FIX: Povray output improved.

   o BUG-FIX: The representation is no longer changed after editing
     atoms in CA+ligs representation.

-----


Release 0.4.1 "Kendall^2"

   o BUG-FIX: Fix problem of key press with no map causing crash.

Release 0.4 "Kendall"

   o FEATURE: Kevin Cowtan has given us "Cootaneer" [slim-line
     side-chain-assigning Buccaneer for Coot]

   o FEATURE: Richardson Rotamers (instead of Dunbrack's) are used by
     default. Rotamers are named int the dialog (the probability
     limits are no longer meaninful) [Dirk Kostrewa]

   o FEATURE: New environment variable COOT_SCHEME_EXTRA_DIR introduced. If the 